style(call-to-action.module.scss): update styles for sm class to improve design consistency and readability fix(seo.tsx): update default OG image path to point to the correct location in the project fix(seo.tsx): update paths for apple-touch-icon, favicon, and manifest files to point to the correct location feat(dashboard): add new dashboard feature with views and layout components feat(dashboard/layout): create DashboardLayout component for dashboard feature with sidebar, header, and SEO integration

--- a/labs/components/call-to-action/call-to-action.module.scss
+++ b/labs/components/call-to-action/call-to-action.module.scss
@@ -18,8 +18,10 @@
 
 	&.sm {
 		padding: 10px 18px;
-		@include typography('p');
-		font-weight: 700;
+		@include typography('accent');
+		font-weight: 600;
+		height: fit-content;
+		width: fit-content;
 	}
 
 	&.md,
